--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #main{
     height: 2180px;
     width: 1250px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     background-color:black;
 }
 h1{
@@ -61,7 +61,7 @@ h1{
 #part1{
     height: 350px;
     width: 1200px;
-    border: 2px solid white;
+    /* border: 2px solid white; */
     border-radius: 15px;
     box-shadow: 2px 2px 5px 5px blueviolet;
     background-color: black;
@@ -246,7 +246,7 @@ h1{
 .hobbies{
     height: 210px;
     width: 250px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     border-radius: 15px;
 }
 
@@ -291,3 +291,4 @@ span{
     color: blue;
 
 }
+
